[gd_scene load_steps=8 format=3 uid="uid://c8nqocnwev1la"]

[ext_resource type="Script" path="res://Video.gd" id="1_r8w2p"]
[ext_resource type="Theme" uid="uid://db15xvnncv14b" path="res://scenes/theme.tres" id="2_drrpn"]
[ext_resource type="Texture2D" uid="uid://do0fuotyu7oht" path="res://assets/img/monitor.png" id="2_xuisb"]
[ext_resource type="Texture2D" uid="uid://b5w7sojv6lk5y" path="res://assets/img/monitor3.jpeg" id="3_xr4fs"]
[ext_resource type="Texture2D" uid="uid://jadvfqvunaro" path="res://assets/img/monitor2.png" id="4_hsimh"]
[ext_resource type="Texture2D" uid="uid://c44hedth4opdx" path="res://assets/img/monitor4.jpeg" id="5_ukvp7"]

[sub_resource type="Environment" id="Environment_6anru"]
background_mode = 3
glow_enabled = true

[node name="Video" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = 1.0
offset_right = -3.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r8w2p")

[node name="Button" type="Button" parent="."]
layout_mode = 0
theme = ExtResource("2_drrpn")
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="TextureButton" type="TextureButton" parent="."]
self_modulate = Color(0, 2.703, 20, 1)
layout_mode = 2
offset_left = 513.0
offset_top = 23.0
offset_right = 906.0
offset_bottom = 254.0
texture_normal = ExtResource("2_xuisb")

[node name="Label4" type="Label" parent="TextureButton"]
layout_mode = 0
offset_left = 120.0
offset_top = 91.0
offset_right = 272.0
offset_bottom = 131.0
theme_override_font_sizes/font_size = 29
text = "2560x1440"

[node name="TextureButton2" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 508.0
offset_top = 253.0
offset_right = 908.0
offset_bottom = 507.0
texture_normal = ExtResource("3_xr4fs")

[node name="Label2" type="Label" parent="TextureButton2"]
layout_mode = 0
offset_left = 114.0
offset_top = 94.0
offset_right = 266.0
offset_bottom = 134.0
theme_override_font_sizes/font_size = 29
text = "1920x1080"

[node name="TextureButton3" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 293.0
offset_top = 62.0
offset_right = 514.0
offset_bottom = 208.0
texture_normal = ExtResource("4_hsimh")

[node name="Label3" type="Label" parent="TextureButton3"]
layout_mode = 0
offset_left = 46.0
offset_top = 59.0
offset_right = 181.0
offset_bottom = 99.0
theme_override_font_sizes/font_size = 29
text = "1600x900"

[node name="TextureButton4" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 195.0
offset_top = 201.0
offset_right = 515.0
offset_bottom = 415.0
texture_normal = ExtResource("5_ukvp7")

[node name="Label" type="Label" parent="TextureButton4"]
layout_mode = 0
offset_left = 81.0
offset_top = 78.0
offset_right = 216.0
offset_bottom = 118.0
theme_override_font_sizes/font_size = 29
text = "1280x720"

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 463.0
offset_top = 548.0
offset_right = 927.0
offset_bottom = 588.0
theme_override_font_sizes/font_size = 29
text = "Click monitor to select resolution"

[node name="Label6" type="Label" parent="."]
layout_mode = 0
offset_left = 69.0
offset_top = 508.0
offset_right = 294.0
offset_bottom = 531.0
text = "1920x1080"

[node name="Label7" type="Label" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 481.0
offset_right = 285.0
offset_bottom = 504.0
text = "Current Resolution:
"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6anru")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_texture_button_3_pressed"]
[connection signal="pressed" from="TextureButton4" to="." method="_on_texture_button_4_pressed"]
